# Explore_BERT_Vocabulary

./: .gitignore  README.md  dataset_make.sh  make_dataset.py  pyproject.toml  sample_wiki40b.py
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/environment/ubuntu/: Dockerfile  Dockerfile.gpu
doc/: dev_container.md
explore_bert_vocabulary/: ginza_sample.py  test.py
