[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["yoo <mi21a001@oecu.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.5"
numpy = "1.22.4"
tensorflow = {version = "^2.9.1", markers = "platform_machine == 'x86_64'"}
tensorflow-aarch64 = {version = "^2.9.1", markers = "platform_machine == 'aarch64'"}
protobuf = "3.19.4"
llvmlite = "^0.39.1"
tensorflow-datasets = "^4.7.0"
apache-beam = {extras = ["gcp"], version = "^2.41.0"}
bunkai = "^1.5.5"
progressbar = "^2.5"
tfds-nightly = "^4.7.0.dev202210140046"
pandas = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
